--- a/小说频道总目录/index.html
+++ b/小说频道总目录/index.html
@@ -24,5 +24,6 @@
   </script>
   <h2>福利姬频道目录</h2>
   <p><a href="./短篇小说/menu.html">短篇小说</a></p> 
+  <p><a href="./轻松寨约炮作业全集/menu.html">轻松寨约炮作业全集</a></p> 
 </body>
 </html>
