--- a/漫画频道总目录/index.html
+++ b/漫画频道总目录/index.html
@@ -23,6 +23,10 @@
     document.title = folderName; // 同时修改网页标签标题
   </script>
   <h2>福利姬频道目录</h2>
+  <p><a href="./1、漫画目录一区/menu.html">1、漫画目录一区</a></p> 
+  <p><a href="./2、漫画目录二区/menu.html">2、漫画目录二区</a></p> 
+  <p><a href="./3、漫画目录三区/menu.html">3、漫画目录三区</a></p> 
+  <p><a href="./4、漫画目录四区/menu.html">4、漫画目录四区</a></p> 
   <p><a href="./漫画(女同)全集/menu.html">漫画(女同)全集</a></p> 
   <p><a href="./漫画(彩色)全集/menu.html">漫画(彩色)全集</a></p> 
   <p><a href="./漫画(黑白)全集/menu.html">漫画(黑白)全集</a></p> 
