--- a/advertise.html
+++ b/advertise.html
@@ -49,6 +49,9 @@
 	<a href="https://t.me/yunvgongxiaoshuo" target="_blank" rel="noopener noreferrer">
       御女宫小说频道←点击关注
     </a>
+	<a href="https://t.me/yunvgongshuiguopai" target="_blank" rel="noopener noreferrer">
+      御女宫水果派AV频道←点击关注
+    </a>
   </p>
 </body>
 </html>
